samples/_failures_safe/1761082373_b6df76_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f50cadba.c: In function ‘main’:
./samples/SAFE/__tmp_f50cadba.c:160:5: error: expected declaration or statement at end of input
  160 |     add_edge(&graph, 0, 1, 4);
      |     ^~~~~~~~
